# near-shade-coordination

./: .claude.json  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  README.md  build-contracts.sh  delibera-v2-claude-code-plan.md  permissionless-protocol-plan.md  run-dev.sh
contracts/voting/: hardhat.config.ts  package-lock.json  package.json  tsconfig.json
coordinator-agent/: .env.development.local.example  Dockerfile  docker-compose.yaml  package-lock.json  package.json
coordinator-agent/src/: index.ts  (+2 more)
coordinator-contract/: Cargo.toml  README.md  build.sh
coordinator-contract/src/: lib.rs
doc/: INDEX.md
factory-contract/: Cargo.toml
factory-contract/src/: lib.rs
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
protocol-api/: Dockerfile  package-lock.json  package.json
registry-contract/: Cargo.toml  build.sh
scripts/: deploy-contracts.mjs  deploy-contracts.ts  migrate-profiles-to-storacha.ts  seed-ensue-profiles.ts  setup-local.sh  start-all.sh  test-flow.sh
shared/: package-lock.json  package.json
templates/: coordinator-compose.yml  worker-compose.yml
worker-agent/: .env.example  Dockerfile  docker-compose.yaml  package-lock.json  package.json
worker-agent-1/: .env.development.local.example  package-lock.json  package.json
worker-agent-2/: .env.development.local.example  Dockerfile  docker-compose.yaml  package-lock.json  package.json
worker-agent-3/: .env.development.local.example  Dockerfile  docker-compose.yaml  package-lock.json  package.json
(+254 files in other folders)
