[package]
name = "coordinator_factory"
description = "NEAR factory contract that deploys sovereign coordinator contract instances"
version = "0.1.0"
edition = "2021"
authors = ["Delibera Team"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { version = "=5.17.2" }
serde_json = "1.0.135"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
